--- a/apps/Index.html
+++ b/apps/Index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <base target="_top">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <?!= include('Styles'); ?> <!-- See Styles -->
-    <?!= include('JavaScript'); ?> <!-- See JavaScript.html file -->     
+    <?!= include('templates\\Libraries'); ?>
+    <?!= include('templates\\Styles'); ?> <!-- See Styles -->
+    <?!= include('templates\\JavaScript'); ?> <!-- See JavaScript.html file -->     
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <?!= include('DecalForm'); ?> <!-- See DemoForm.html file -->
+          <?!= include('templates\\DecalForm'); ?> <!-- See DemoForm.html file -->
           <br><br>
           <div id="output"></div>
         </div>
